Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-content">
             <!-- Badge Premium -->
             <div style="display: inline-block; background: linear-gradient(135deg, var(--primary-blue), var(--accent-green)); padding: 0.5rem 1.5rem; border-radius: 50px; margin-bottom: 2rem; font-weight: bold; font-size: 0.9rem; animation: slideDown 1s ease;">
-                ⭐ LAPANGAN BADMINTON TERBAIK SE-KOTA
+                ⭐ LAPANGAN BADMINTON TERBAIK di Riau
             </div>
             
              <!-- Logo Bulat -->
@@ -42,7 +42,7 @@
             </div>
 
             <h1>Fahytaa Sport</h1>
-            <p style="font-size: 1.5rem; margin-bottom: 1rem;">Lapangan Badminton Premium dengan Fasilitas Terbaik di Kota Anda</p>
+            <p style="font-size: 1.5rem; margin-bottom: 1rem;">Lapangan Badminton Premium dengan Fasilitas Terbaik di Riau</p>
             
             <!-- Feature Highlights -->
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 1.5rem; max-width: 700px; margin: 2rem auto; animation: slideUp 1s ease 0.4s backwards;">
@@ -477,3 +477,4 @@
     </script>
 </body>
 </html>
+
