--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-content">
             <!-- Badge Premium -->
             <div class="premium-badge">
-                ⭐ LAPANGAN BADMINTON TERBAIK SE-KOTA
+                ⭐ LAPANGAN BADMINTON TERBAIK SE-RIAU
             </div>
             
             <h1>Fahytaa Sport</h1>
@@ -440,7 +440,7 @@
                     </div>
 
                     <button type="submit" class="cta-btn form-submit-btn">
-                        Lanjutkan Reservasi via WhatsApp
+                        Pesan Sekarang
                     </button>
                 </form>
 
@@ -464,7 +464,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/6285183220322?text=Halo,%20saya%20ingin%20reservasi%20lapangan" class="whatsapp-btn" target="_blank">
+    <a href="https://wa.me/6285119008900?text=Halo,%20saya%20ingin%20reservasi%20lapangan" class="whatsapp-btn" target="_blank">
         💬
     </a>
 
