--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="hero-content">
             <!-- Badge Premium -->
             <div class="premium-badge">
-                ⭐ LAPANGAN BADMINTON TERBAIK SE-RIAU
+                ⭐ LAPANGAN BADMINTON TERBAIK DI RIAU
             </div>
             
             <h1>Fahytaa Sport</h1>
-            <p class="hero-sub-title">Lapangan Badminton Premium dengan Fasilitas Terbaik di Kota Anda</p>
+            <p class="hero-sub-title">Lapangan Badminton Premium dengan Fasilitas Terbaik di Riau</p>
             
             <!-- Feature Highlights -->
             <div class="feature-highlights">
@@ -452,7 +452,7 @@
     <footer>
         <div class="footer-content">
             <div class="logo footer-logo">⚡ FAHYTAA SPORT</div>
-            <p>Lapangan Badminton Premium #1 di Kota Anda</p>
+            <p>Lapangan Badminton Premium #1 di Riau</p>
             <div class="social-links">
                 <a href="#" title="Instagram">📷</a>
                 <a href="#" title="Facebook">📘</a>
